--- a/relinksys/web/src/app/admin/company-setting/company-setting.component.html
+++ b/relinksys/web/src/app/admin/company-setting/company-setting.component.html
@@ -344,9 +344,14 @@
                                                                 [(ngModel)]="data.FontsStyle">
                                                         </mat-form-field>
                                                     </div>
-                                                    <div class="col-xl-1 col-lg-1" style=" margin-right: 53px;">
+                                                    <div class="col-xl-1 col-lg-1" >
                                                         <mat-slide-toggle name="AppliedDiscount" color="primary" #Multiplecontrol
                                                             [(ngModel)]="data.AppliedDiscount" class="example-margin">Round
+                                                        </mat-slide-toggle>
+                                                    </div>
+                                                    <div class="col-xl-1 col-lg-1" >
+                                                        <mat-slide-toggle name="IsIpCheck" color="primary" #Multiplecontrol
+                                                            [(ngModel)]="data.IsIpCheck" class="example-margin">Ip Check
                                                         </mat-slide-toggle>
                                                     </div>
                                                     <div class="col-md-3 ">
