--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -114,10 +114,10 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Product Status</mat-label>
                         <mat-select name="ProductStatus" [(ngModel)]="BillMaster.ProductStatus" 
-                            #ProductStatuscontrol >
+                            #ProductStatuscontrol (selectionChange)="changeProductStatusAll()">
                             <mat-option value="Pending">  Pending </mat-option>
                             <mat-option value="Deliverd" > Delivered </mat-option>
-                            <mat-option value="ReadyForDelivery " > Ready For Delivery </mat-option>
+                            <mat-option value="ReadyForDelivery"  disabled> Ready For Delivery </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
