--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -116,7 +116,7 @@
                         <mat-select name="ProductStatus" [(ngModel)]="BillMaster.ProductStatus" 
                             #ProductStatuscontrol (selectionChange)="changeProductStatusAll()">
                             <mat-option value="Pending">  Pending </mat-option>
-                            <mat-option value="ReadyForDelivery" disabled > Ready For Delivery </mat-option>
+                            <mat-option value="ReadyForDelivery"  > Ready For Delivery </mat-option>
                             <mat-option value="Deliverd" > Delivered </mat-option>
                         </mat-select>
                     </mat-form-field>
