--- a/garment/web/src/app/sale/billing/billing.component.css
+++ b/garment/web/src/app/sale/billing/billing.component.css
@@ -32,10 +32,10 @@
 }
 
 .card {
-    padding-left: 5px;
-    padding-right: 5px;
+    /* padding-left: 0px;
+    padding-right: 0px; */
     margin-top: 5px;
-    width: 99%;
+    width: 100%;
     padding-bottom: 10px;
 }
 
