--- a/relinksys/web/src/app/admin/employee/employee.component.html
+++ b/relinksys/web/src/app/admin/employee/employee.component.html
@@ -144,7 +144,7 @@
                                              <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>User Group</mat-label>
                                                 <mat-select name="UserGroup" [(ngModel)]="data.UserGroup"
-                                                    required #UserGroupTypecontrol>
+                                                    required #UserGroupTypecontrol disabled>
                                                     <mat-option value='CompanyAdmin'>CompanyAdmin</mat-option>
                                                     <mat-option value='Employee'>Employee</mat-option>
                                                 </mat-select>
