--- a/relinksys/web/src/app/admin/employee/employee.component.html
+++ b/relinksys/web/src/app/admin/employee/employee.component.html
@@ -169,6 +169,11 @@
                                                 <mat-error> Fill Password atleast 3 digit.</mat-error>
                                             </mat-form-field>
                                         </div>
+                                         <div class="col-md-3 col-sm-6 col-6 ">
+                                            <mat-slide-toggle type="ratio" name="IsGetReport" color="primary"
+                                                [(ngModel)]="data.IsGetReport" class="example-margin"> IsGetReport 
+                                            </mat-slide-toggle>
+                                        </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-0 mt-md-2 mt-0 mb-3">
