--- a/relinksys/api/views/lenscut.ejs
+++ b/relinksys/api/views/lenscut.ejs
@@ -657,12 +657,13 @@
                                      <%})}%>
                                 </td>
                             </tr>
-                            <tr>
-                                <td colspan="2">You've Saved <%= data.SavedDiscount %> Rs. on this Invoice!</td>
-                            </tr>
                         </tbody>
                     </table>
                 </td>
+            </tr>
+            <tr>
+                <td >Shop Timing :- <%= data.shopdetails.ShopTiming %></td>
+                <td >You've Saved <%= data.SavedDiscount %> Rs. on this Invoice!</td>
             </tr>
         </tbody>
     </table>
