--- a/relinksys/web/src/app/report/inventory-report/inventory-report.component.html
+++ b/relinksys/web/src/app/report/inventory-report/inventory-report.component.html
@@ -225,7 +225,7 @@
                         <button type="button" class="me-2" mat-raised-button color="warn" (click)="inventoryAll()">
                           All Stock
                         </button>
-                        <button *ngIf="user?.UserGroup == 'CompanyAdmin'" class="me-2" type="button" mat-raised-button color="warn" data-mdb-toggle="modal"
+                        <button *ngIf="user?.UserGroup == 'CompanyAdmin' || editInventoryReport == true" class="me-2" type="button" mat-raised-button color="warn" data-mdb-toggle="modal"
                           data-mdb-target="#exampleModal" (click)="updatePurchasePriceModel(content3)" >
                           Purchase Price
                         </button>
