--- a/relinksys/web/src/app/admin/employee/employee.component.html
+++ b/relinksys/web/src/app/admin/employee/employee.component.html
@@ -187,7 +187,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div *ngIf="companyData.PhotoClick == true" class="col-md-2 col-12 ps-0 ps-lg-5">
+                                <div *ngIf="this.companyData.PhotoClick == 'true'" class="col-md-2 col-12 ps-0 ps-lg-5">
                                     <div class="row">
                                         <div class="col-12 mt-1 ">
                                             <img class="fit-picture" width="170" height="170" [src]="userImage">
