--- a/relinksys/web/src/app/sale/bill/bill.component.html
+++ b/relinksys/web/src/app/sale/bill/bill.component.html
@@ -137,7 +137,7 @@
                 <div *ngIf="company.ID != 241 && company.ID != 300 && this.loginShop.PerOrder === 'true'" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Preorder" color="primary" [(ngModel)]="BillItem.PreOrder"
                         class="example-margin" #Preordercontrol style="color:#ff651e;"
-                        [disabled]="BillItem.Manual === true">
+                        [disabled]="BillItem.Manual === true" (click)="manualDataRefresh()">
                         Preorder</mat-slide-toggle>
                 </div>
                 <div *ngIf="company.ID != 241 && company.ID != 300 && this.loginShop.Manual === 'true'" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
